changed tool recipe to show all parts for a given tool
Took 2 hours 25 minutes

Took 2 minutes