@@ -2,25 +2,18 @@ package me.paypur.tconjei.jei;
 
 import mezz.jei.api.IModPlugin;
 import mezz.jei.api.JeiPlugin;
-import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.registration.IRecipeCatalystRegistration;
 import mezz.jei.api.registration.IRecipeCategoryRegistration;
 import mezz.jei.api.registration.IRecipeRegistration;
-import net.minecraft.core.Registry;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
-import slimeknights.mantle.util.RegistryHelper;
-import slimeknights.tconstruct.common.TinkerTags;
 import slimeknights.tconstruct.library.materials.MaterialRegistry;
-import slimeknights.tconstruct.library.materials.definition.IMaterial;
 import slimeknights.tconstruct.library.materials.definition.Material;
-import slimeknights.tconstruct.library.materials.definition.MaterialId;
-import slimeknights.tconstruct.library.tools.part.IToolPart;
+import slimeknights.tconstruct.library.tools.definition.ToolDefinitionLoader;
 import slimeknights.tconstruct.tables.TinkerTables;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static me.paypur.tconjei.TConJEI.MOD_ID;
@@ -29,7 +22,7 @@ import static me.paypur.tconjei.TConJEI.MOD_ID;
 @JeiPlugin
 public class TConJEIPlugin implements IModPlugin {
 
-    private static final RecipeType<MaterialStatsWrapper> RECIPE_TYPE = RecipeType.create(MOD_ID, "material_stats", MaterialStatsWrapper.class);
+    private static final RecipeType<MaterialStatsWrapper> MATERIAL_STATS = RecipeType.create(MOD_ID, "material_stats", MaterialStatsWrapper.class);
     private static final RecipeType<ToolPartWrapper> TOOL_PARTS = RecipeType.create(MOD_ID, "tool_parts", ToolPartWrapper.class);
 
     @Override
@@ -39,8 +32,8 @@ public class TConJEIPlugin implements IModPlugin {
 
     @Override
     public void registerRecipes(IRecipeRegistration registration) {
-        registration.addRecipes(RECIPE_TYPE, recipes());
-        registration.addRecipes(TOOL_PARTS, getToolParts());
+        registration.addRecipes(MATERIAL_STATS, materials());
+        registration.addRecipes(TOOL_PARTS, toolDefinitions());
     }
 
     @Override
@@ -51,11 +44,15 @@ public class TConJEIPlugin implements IModPlugin {
 
     @Override
     public void registerRecipeCatalysts(IRecipeCatalystRegistration registration) {
-        registration.addRecipeCatalyst(new ItemStack(TinkerTables.tinkerStation.asItem()), RECIPE_TYPE);
-        registration.addRecipeCatalyst(new ItemStack(TinkerTables.tinkersAnvil.asItem()), RECIPE_TYPE);
+        registration.addRecipeCatalyst(new ItemStack(TinkerTables.tinkerStation.asItem()), MATERIAL_STATS);
+        registration.addRecipeCatalyst(new ItemStack(TinkerTables.tinkersAnvil.asItem()), MATERIAL_STATS);
+        registration.addRecipeCatalyst(new ItemStack(TinkerTables.scorchedAnvil.asItem()), MATERIAL_STATS);
+        registration.addRecipeCatalyst(new ItemStack(TinkerTables.tinkerStation.asItem()), TOOL_PARTS);
+        registration.addRecipeCatalyst(new ItemStack(TinkerTables.tinkersAnvil.asItem()), TOOL_PARTS);
+        registration.addRecipeCatalyst(new ItemStack(TinkerTables.scorchedAnvil.asItem()), TOOL_PARTS);
     }
 
-    private List<MaterialStatsWrapper> recipes() {
+    private List<MaterialStatsWrapper> materials() {
         return MaterialRegistry.getMaterials()
                 .stream()
                 .filter(iMaterial -> !iMaterial.isHidden())
@@ -64,11 +61,12 @@ public class TConJEIPlugin implements IModPlugin {
                 .collect(Collectors.toList());
     }
 
-    private List<ToolPartWrapper> getToolParts() {
-        return RegistryHelper.getTagValueStream(Registry.ITEM, TinkerTags.Items.TOOL_PARTS)
-                .filter(part -> part instanceof IToolPart)
-                .map(part -> new ToolPartWrapper((IToolPart) part))
-                .collect(Collectors.toList());
+    private List<ToolPartWrapper> toolDefinitions() {
+        return ToolDefinitionLoader.getInstance().getRegisteredToolDefinitions()
+                .stream()
+                .filter(definition -> definition.isMultipart() && !definition.getId().equals(new ResourceLocation("tconstruct", "slime_helmet")))
+                .map(tool -> new ToolPartWrapper(tool))
+                .toList();
     }
 
 
